[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SceneScripts/BuildingInterior.gd" type="Script" id=1]
[ext_resource path="res://Scripts/WallObstructors.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SceneYSort.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Pathfinding/Astar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tilesets/InteriorBuildingTileset.tres" type="TileSet" id=5]

[node name="BuildingInteriorFloor" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_scale = Vector2( 4, 4 )
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="PathTileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="TilledEarthTileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="WaterTileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="FenceTileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="WallObstructors" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2147483648
script = ExtResource( 2 )

[node name="YSort" type="YSort" parent="."]
script = ExtResource( 3 )

[node name="TreesYSort" type="YSort" parent="YSort"]

[node name="PlantsYSort" type="YSort" parent="YSort"]

[node name="GrassesYSort" type="YSort" parent="YSort"]

[node name="FlowersYSort" type="YSort" parent="YSort"]

[node name="StonesYSort" type="YSort" parent="YSort"]

[node name="ItemsYSort" type="YSort" parent="YSort"]

[node name="BuildingsYSort" type="YSort" parent="YSort"]

[node name="RooftopsYSort" type="YSort" parent="YSort"]

[node name="CharactersYSort" type="YSort" parent="YSort"]

[node name="TileMapYSort" type="YSort" parent="YSort"]

[node name="ObjectsYSort" type="YSort" parent="YSort"]

[node name="WallObstructorYSort" type="YSort" parent="YSort"]

[node name="EntrancePositions" type="Node2D" parent="."]

[node name="Astar" parent="." instance=ExtResource( 4 )]

[node name="BackgroundObjects" type="Node2D" parent="."]
